--- a/templates/header.html
+++ b/templates/header.html
@@ -4,6 +4,9 @@
 		<title>{{.Title}}</title>
 		<link href="/static/main.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="/static/jquery-1.12.3.min.js"></script>
+		<script type="text/javascript">
+		var session = "{{.CurrentUser.Session}}";
+		</script>
 		<script type="text/javascript" src="/static/global.js"></script>
 	</head>
 	<body>
